--- a/GdscWebDev/index.html
+++ b/GdscWebDev/index.html
@@ -1,8 +1,11 @@
-<html>
-    <head>
-        <title>MyPage</title>
-    </head>
-    <body>
-        <p>Hello World!</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>first file</title>
+</head>
+<body>
+    <p>crated succesfully</p>
+</body>
 </html>
